Add content to the Rock Recommendations section
Looks not bad ngl

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -786,7 +786,180 @@
 
           <div class="rock-section">
             <div class="rock-songs">
-              recommended songs ( scroll area with songs)
+              <h2 class="rock-recs-title no-margin">Rock</h2>
+              <ul class="rock-recs-songs-list">
+                <li class="rock-recs-song">
+                  <div class="rock-recs-info">
+                    <img
+                      class="rock-recs-song-cover"
+                      src="/assets/images/jpg/song-cover-9.jpg"
+                      alt="recs-song-cover"
+                    />
+                    <div class="author-infobox">
+                      <p class="no-margin">Teenagers</p>
+                      <p class="author-nickname-rock no-margin">
+                        My Chemical Romance
+                      </p>
+                    </div>
+                  </div>
+
+                  <img
+                    class="options-button"
+                    src="/assets/images/svg/3dots-vertical.svg"
+                    alt="options"
+                  />
+                </li>
+
+                <li class="rock-recs-song">
+                  <div class="rock-recs-info">
+                    <img
+                      class="rock-recs-song-cover"
+                      src="/assets/images/jpg/song-cover-7.jpg"
+                      alt="recs-song-cover"
+                    />
+                    <div class="author-infobox">
+                      <p class="no-margin">Somewhere I belong</p>
+                      <p class="author-nickname-rock no-margin">Linkin Park</p>
+                    </div>
+                  </div>
+
+                  <img
+                    class="options-button"
+                    src="/assets/images/svg/3dots-vertical.svg"
+                    alt="options"
+                  />
+                </li>
+
+                <li class="rock-recs-song">
+                  <div class="rock-recs-info">
+                    <img
+                      class="rock-recs-song-cover"
+                      src="/assets/images/jpg/song-cover-11.jpg"
+                      alt="recs-song-cover"
+                    />
+                    <div class="author-infobox">
+                      <p class="no-margin">Sleepwalking</p>
+                      <p class="author-nickname-rock no-margin">
+                        Bring Me The Horizon
+                      </p>
+                    </div>
+                  </div>
+
+                  <img
+                    class="options-button"
+                    src="/assets/images/svg/3dots-vertical.svg"
+                    alt="options"
+                  />
+                </li>
+
+                <li class="rock-recs-song">
+                  <div class="rock-recs-info">
+                    <img
+                      class="rock-recs-song-cover"
+                      src="/assets/images/jpg/song-cover-10.jpg"
+                      alt="recs-song-cover"
+                    />
+                    <div class="author-infobox">
+                      <p class="no-margin">You're Gonna Go Far, Kid</p>
+                      <p class="author-nickname-rock no-margin">
+                        The Offspring
+                      </p>
+                    </div>
+                  </div>
+
+                  <img
+                    class="options-button"
+                    src="/assets/images/svg/3dots-vertical.svg"
+                    alt="options"
+                  />
+                </li>
+
+                <li class="rock-recs-song">
+                  <div class="rock-recs-info">
+                    <img
+                      class="rock-recs-song-cover"
+                      src="/assets/images/jpg/song-cover-12.jpg"
+                      alt="recs-song-cover"
+                    />
+                    <div class="author-infobox">
+                      <p class="no-margin">Aerials</p>
+                      <p class="author-nickname-rock no-margin">
+                        System Of A Down
+                      </p>
+                    </div>
+                  </div>
+
+                  <img
+                    class="options-button"
+                    src="/assets/images/svg/3dots-vertical.svg"
+                    alt="options"
+                  />
+                </li>
+
+                <li class="rock-recs-song">
+                  <div class="rock-recs-info">
+                    <img
+                      class="rock-recs-song-cover"
+                      src="/assets/images/jpg/song-cover-13.jpg"
+                      alt="recs-song-cover"
+                    />
+                    <div class="author-infobox">
+                      <p class="no-margin">Boulevard of Broken Dre...</p>
+                      <p class="author-nickname-rock no-margin">Green Day</p>
+                    </div>
+                  </div>
+
+                  <img
+                    class="options-button"
+                    src="/assets/images/svg/3dots-vertical.svg"
+                    alt="options"
+                  />
+                </li>
+
+                <li class="rock-recs-song">
+                  <div class="rock-recs-info">
+                    <img
+                      class="rock-recs-song-cover"
+                      src="/assets/images/jpg/song-cover-14.jpg"
+                      alt="recs-song-cover"
+                    />
+                    <div class="author-infobox">
+                      <p class="no-margin">Animal I Have Become</p>
+                      <p class="author-nickname-rock no-margin">
+                        Three Days Grace
+                      </p>
+                    </div>
+                  </div>
+
+                  <img
+                    class="options-button"
+                    src="/assets/images/svg/3dots-vertical.svg"
+                    alt="options"
+                  />
+                </li>
+
+                <li class="rock-recs-song">
+                  <div class="rock-recs-info">
+                    <img
+                      class="rock-recs-song-cover"
+                      src="/assets/images/jpg/song-cover-15.jpg"
+                      alt="recs-song-cover"
+                    />
+                    <div class="author-infobox">
+                      <p class="no-margin">Can't Stop</p>
+                      <p class="author-nickname-rock no-margin">
+                        Red Hot Chili Peppers
+                      </p>
+                    </div>
+                  </div>
+
+                  <img
+                    class="options-button"
+                    src="/assets/images/svg/3dots-vertical.svg"
+                    alt="options"
+                  />
+                </li>
+              </ul>
             </div>
             <div class="rock-rpa">
               <div class="rock-new-releases">
@@ -1222,6 +1395,16 @@
         <div class="recommendations-section">
           <div class="recommendations-title-box">
             <div class="recommendations-title no-margin">
+              <p class="no-margin">Library</p>
+            </div>
+
+            <div class="turn-pages-buttons"></div>
+          </div>
+        </div>
+
+        <div class="recommendations-section">
+          <div class="recommendations-title-box">
+            <div class="recommendations-title no-margin">
               <p class="no-margin">Recommendations</p>
             </div>
 
@@ -1358,16 +1541,6 @@
           <div class="recommendations-title-box">
             <div class="recommendations-title no-margin">
               <p class="no-margin">Trends</p>
-            </div>
-
-            <div class="turn-pages-buttons"></div>
-          </div>
-        </div>
-
-        <div class="recommendations-section">
-          <div class="recommendations-title-box">
-            <div class="recommendations-title no-margin">
-              <p class="no-margin">Library</p>
             </div>
 
             <div class="turn-pages-buttons"></div>
