Add content to the Library section and "divs" to the Trends section

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1398,8 +1398,126 @@
               <p class="no-margin">Library</p>
             </div>
 
-            <div class="turn-pages-buttons"></div>
+            <h3 class="no-margin">
+              <span class="closed-category-title gray">Artists</span>
+              &nbsp;Playlists&nbsp;
+              <span class="closed-category-title gray">Albums</span>
+            </h3>
           </div>
+
+          <ul class="recommendations-list">
+            <li class="recommendations-box">
+              <img
+                class="recs-square-cover"
+                src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                alt="ЦЙШЩНР_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">ЙЦШЩНРШКРЙЩША</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Playlist&nbsp; • &nbsp;27 songs
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-square-cover"
+                src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                alt="ЦЙШЩНР_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">ЙЦШЩНРШКРЙЩША</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Playlist&nbsp; • &nbsp;27 songs
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-square-cover"
+                src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                alt="ЦЙШЩНР_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">ЙЦШЩНРШКРЙЩША</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Playlist&nbsp; • &nbsp;27 songs
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-square-cover"
+                src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                alt="ЦЙШЩНР_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">ЙЦШЩНРШКРЙЩША</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Playlist&nbsp; • &nbsp;27 songs
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-square-cover"
+                src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                alt="ЦЙШЩНР_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">ЙЦШЩНРШКРЙЩША</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Playlist&nbsp; • &nbsp;27 songs
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-square-cover"
+                src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                alt="ЦЙШЩНР_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">ЙЦШЩНРШКРЙЩША</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Playlist&nbsp; • &nbsp;27 songs
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-square-cover"
+                src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                alt="ЦЙШЩНР_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">ЙЦШЩНРШКРЙЩША</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Playlist&nbsp; • &nbsp;27 songs
+              </p>
+            </li>
+
+            <li class="recommendations-box">
+              <img
+                class="recs-square-cover"
+                src="/assets/images/png/ЦЙШЩНР_playlist.png"
+                alt="ЦЙШЩНР_playlist"
+              />
+
+              <p class="recs-artist-title no-margin">ЙЦШЩНРШКРЙЩША</p>
+
+              <p class="recs-artist-box author-playlist no-margin">
+                Playlist&nbsp; • &nbsp;27 songs
+              </p>
+            </li>
+          </ul>
         </div>
 
         <div class="recommendations-section">
@@ -1545,6 +1663,13 @@
 
             <div class="turn-pages-buttons"></div>
           </div>
+
+          <ul class="trends-list">
+            <li class="trends-song"></li>
+            <li class="trends-song"></li>
+            <li class="trends-song"></li>
+            <li class="trends-song"></li>
+          </ul>
         </div>
 
         <div class="mla-section">
