--- a/source/html/index.html
+++ b/source/html/index.html
@@ -580,7 +580,6 @@
         </div>
 
         <!-- Recently played content Section -->
-
         <div class="rpc-section">
           <div class="rpc-title-box">
             <div class="rpc-title no-margin">
@@ -738,7 +737,6 @@
         </div>
 
         <!-- Categories Section -->
-
         <div class="categories-section">
           <div class="categories-title-box">
             <h3 class="no-margin">
@@ -1392,6 +1390,7 @@
           </div>
         </div>
 
+        <!-- Library Section -->
         <div class="recommendations-section">
           <div class="recommendations-title-box">
             <div class="recommendations-title no-margin">
@@ -1520,6 +1519,7 @@
           </ul>
         </div>
 
+        <!-- Recommendations Section -->
         <div class="recommendations-section">
           <div class="recommendations-title-box">
             <div class="recommendations-title no-margin">
@@ -1655,6 +1655,7 @@
           </ul>
         </div>
 
+        <!-- Trends Section -->
         <div class="recommendations-section">
           <div class="recommendations-title-box">
             <div class="recommendations-title no-margin">
@@ -1665,7 +1666,35 @@
           </div>
 
           <ul class="trends-list">
-            <li class="trends-song"></li>
+            <li class="trends-box">
+              <img
+                class="trends-song-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="song-cover-8"
+              />
+
+              <div class="trends-infobox">
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">Лесбіянство (не) модно</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <img
+                    class="new-release-author-icon"
+                    src="/assets/images/jpg/author-icon.jpeg"
+                    alt="new-release-author-icon"
+                  />
+                  <div class="author-infobox">
+                    <p class="no-margin">СТРУКТУРА ЩАСТЯ</p>
+                    <p class="new-release-author-info no-margin">
+                      118.4K followers
+                    </p>
+                  </div>
+                </div>
+
+                <div class="trends-song-details">"камбек лесбіянства"</div>
+              </div>
+            </li>
             <li class="trends-song"></li>
             <li class="trends-song"></li>
             <li class="trends-song"></li>
