--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1695,9 +1695,93 @@
                 <div class="trends-song-details">"камбек лесбіянства"</div>
               </div>
             </li>
-            <li class="trends-song"></li>
-            <li class="trends-song"></li>
-            <li class="trends-song"></li>
+            <li class="trends-box">
+              <img
+                class="trends-song-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="song-cover-8"
+              />
+
+              <div class="trends-infobox">
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">Лесбіянство (не) модно</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <img
+                    class="new-release-author-icon"
+                    src="/assets/images/jpg/author-icon.jpeg"
+                    alt="new-release-author-icon"
+                  />
+                  <div class="author-infobox">
+                    <p class="no-margin">СТРУКТУРА ЩАСТЯ</p>
+                    <p class="new-release-author-info no-margin">
+                      118.4K followers
+                    </p>
+                  </div>
+                </div>
+
+                <div class="trends-song-details">"камбек лесбіянства"</div>
+              </div>
+            </li>
+            <li class="trends-box">
+              <img
+                class="trends-song-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="song-cover-8"
+              />
+
+              <div class="trends-infobox">
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">Лесбіянство (не) модно</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <img
+                    class="new-release-author-icon"
+                    src="/assets/images/jpg/author-icon.jpeg"
+                    alt="new-release-author-icon"
+                  />
+                  <div class="author-infobox">
+                    <p class="no-margin">СТРУКТУРА ЩАСТЯ</p>
+                    <p class="new-release-author-info no-margin">
+                      118.4K followers
+                    </p>
+                  </div>
+                </div>
+
+                <div class="trends-song-details">"камбек лесбіянства"</div>
+              </div>
+            </li>
+            <li class="trends-box">
+              <img
+                class="trends-song-cover"
+                src="/assets/images/png/структура-щастя_playlist.png"
+                alt="song-cover-8"
+              />
+
+              <div class="trends-infobox">
+                <div class="new-release-title-box">
+                  <p class="song-title no-margin">Лесбіянство (не) модно</p>
+                </div>
+
+                <div class="new-release-author-box">
+                  <img
+                    class="new-release-author-icon"
+                    src="/assets/images/jpg/author-icon.jpeg"
+                    alt="new-release-author-icon"
+                  />
+                  <div class="author-infobox">
+                    <p class="no-margin">СТРУКТУРА ЩАСТЯ</p>
+                    <p class="new-release-author-info no-margin">
+                      118.4K followers
+                    </p>
+                  </div>
+                </div>
+
+                <div class="trends-song-details">"камбек лесбіянства"</div>
+              </div>
+            </li>
           </ul>
         </div>
 
